**Changelog**

***TESTING BRANCH***
DONE - set ondown in movie view etc to select first item in grid
- recent tvshow episode listing not working 

DONE - Add progress bar to resumable content

[V1.2.4]
- [UPDATED] French language file
- [UPDATED] Norwegian language file
- [UPDATED] Polish language file
- [UPDATED] Home screen tweaked
- [UPDATED] PVR Channel group control added to PVR section
- [FIXED] Music playlist view
- Various minor tweaks

[V1.2.3]
- [FIXED] Fullscreen music activation could hang kodi in some cases
- [FIXED] Incorrect casing on some font calls (thanks BigNoid)
- [FIXED] Audio offset blocked by dialog background (thanks PaulVT / iamgroot)
- [FIXED] Remove script-skinshortcuts-includes.xml from github tree
- [FIXED] Vignette on artist slideshow adjusted to increase brightness
- [FIXED] PVR Channel icon aspect ratio adjusted for wider icon support
- [FIXED] change aspect ratio blocked by dialog background
- [FIXED] "Play DVD" changed to "Play Disc"
- [FIXED] Fullscreen music -> home transition when music is stopped by user
- [FIXED] Reduced font size on edit source dialog
- [NEW] up / down now controls volume in fullscreen musicview
- [NEW] Russian Translation (thanks Vasiliy)
- Various minor tweaks and fixes

[V1.2.2]
- [NEW] Hebrew Translation (thanks Eric P)
- [NEW] Poster view enabled for online sourced content
- [NEW] Time index direct search added
- Minor tweaks and adjustments

[V1.2.0]
- [NEW] Extended fanart support for video info and seasons (active by default)
- [NEW] 'Media Showcase'. This extension to the video info screen presents media art in a much more engaging way, taking advantage of available media art.
- [NEW] User option: disable extended fanart
- [NEW] Keyboard autocomplete support
- [NEW] Improved playlist display in music view
- Various tweaks and adjustments

[V1.1.1]
- [FIXED] Aspect ratio incorrect in poster view (thanks wiiija)
- [NEW] Artist slideshow support
- [NEW] Polish translation (thanks Etharr)