@@ -17,7 +17,7 @@
                 <width>8-col-gutter</width>
                 <height>2-row</height>
                 <wrapmultiline>true</wrapmultiline>
-                <font>dialogTitle</font>
+                <font>itemTitle</font>
                 <textcolor>textActive</textcolor>
             </control>
             <control type="textbox" id="9">
