@@ -104,7 +104,7 @@
                     <pagecontrol>61</pagecontrol>
                 </control>
                 <control type="scrollbar" id="61">
-                    <posx>-24</posx>
+                    <posx>-36</posx>
                     <posy>300</posy>
                     <height>6-row</height>
                     <ondown>8000</ondown>
