@@ -417,7 +417,7 @@
                     <pagecontrol>62</pagecontrol>
                 </control>
                 <control type="scrollbar" id="62">
-                    <posx>-24</posx>
+                    <posx>-36</posx>
                     <posy>186</posy>
                     <height>4-row</height>
                     <ondown>8000</ondown>
