@@ -79,12 +79,26 @@
                 <colordiffuse>overlay</colordiffuse>
                 <aspectratio>stretch</aspectratio>
             </control>
+			<!--page scrollbar-->
+            <control type="group" id="8000">
+                <visible>Control.IsVisible(60)</visible>
+                <animation effect="fade" start="100" end="0" time="100" condition="!controlgroup(8000).hasfocus">conditional</animation>
+                <control type="scrollbar" id="60">
+                    <posx>-24</posx>
+                    <posy>2-row</posy>
+                    <height>20-row</height>
+                    <onright>450</onright>
+                    <onback>450</onback>
+                </control>
+            </control>
             <control type="panel" id="450">
                 <posx>0</posx>
                 <posy>75</posy>
                 <width>12-col</width>
                 <height>20-row</height>
                 <onright>9000</onright>
+				<onleft>60</onleft>
+				<pagecontrol>60</pagecontrol>
                 <itemlayout height="72" width="12-col">
                     <control type="image">
                         <posx>0</posx>
