@@ -42,44 +42,10 @@
                     <onback>9999</onback>
                 </control>
             </control>
-            <!--Folder titles-->
+			<!--page header-->
             <control type="group">
-                <posx>col-1-begin</posx>
-                <posy>row-1-begin</posy>
-                <!--source title-->
-                <control type="grouplist">
-                    <posx>0</posx>
-                    <posy>0</posy>
-                    <width>12-col</width>
-                    <height>2-row</height>
-                    <itemgap>0</itemgap>
-                    <orientation>horizontal</orientation>
-                    <control type="label">
-                        <width>auto</width>
-                        <font>pageTitle</font>
-                        <label>31123</label>
-                        <textcolor>textActive</textcolor>
-                    </control>
-                    <control type="label">
-                        <visible>Playlist.IsRandom</visible>
-                        <width>auto</width>
-                        <font>pageTitle</font>
-                        <label> ($LOCALIZE[31133])</label>
-                        <textcolor>highlight</textcolor>
-                    </control>
-                </control>
-                <!--source subtitle-->
-                <control type="label">
-                    <posx>0</posx>
-                    <posy>45</posy>
-                    <width>24-col</width>
-                    <font>regular</font>
-                    <label>$INFO[container.Numitems,, $LOCALIZE[31014]]</label>
-                    <textcolor>textActive</textcolor>
-                </control>
-            </control>
-            <!--dateTime-->
-            <include>dateTime</include>
+				<include>pageHeader</include>    
+            </control>           
         </control>
         <!--mini window-->
         <include>miniVideoPlayer</include>
