@@ -30,7 +30,8 @@
                         <width>24-col</width>
                         <height>3-row</height>
                         <font>veryLargeLight</font>
-                        <textcolor>66ffffff</textcolor>
+                        <textcolor>ffffffff</textcolor>
+						<aligny>center</aligny>
                         <shadowcolor>-</shadowcolor>
                         <wrapmultiline>true</wrapmultiline>
                         <label>$INFO[container.showtitle]</label>
@@ -38,12 +39,11 @@
 					<control type="textbox">
                         <posx>0</posx>
                         <posy>4-row</posy>
-                        <width>10-col</width>
+                        <width>12-col</width>
                         <height>198</height>
                         <font>textbox</font>
-                        <textcolor>66ffffff</textcolor>
+                        <textcolor>ffffffff</textcolor>
                         <shadowcolor>-</shadowcolor>
-						<autoscroll delay="3000" time="1000" repeat="10000"></autoscroll>
                         <label>$INFO[container.showplot]</label>
                     </control>
                 </control>
