@@ -7,28 +7,6 @@
         <!--background-->
         <include>globalBackground</include>
         <control type="group">
-            <visible>!skin.string(homeBackground)</visible>
-            <animation type="windowOpen" condition="!Skin.HasSetting(lowPowerMode)">
-                <effect type="zoom" center="auto" start="105" tween="sine" end="100" time="1500"/>
-            </animation>
-            <control type="multiimage">
-                  <include>dimensionsFullscreen</include>
-                  <imagepath>$VAR[homeBackgroundLocation]</imagepath>
-                  <timeperimage>45000</timeperimage>
-                  <fadetime>1000</fadetime>
-                  <pauseatend>10000</pauseatend>
-                  <randomize>true</randomize>
-                  <loop>yes</loop>
-                  <aspectratio>stretch</aspectratio>
-            </control>
-            <control type="image">
-                <include>dimensionsFullscreen</include>
-                <texture>vignette.png</texture>
-                <colordiffuse>ffffffff</colordiffuse>
-                <aspectratio>stretch</aspectratio>
-            </control>
-        </control>
-        <control type="group">
             <posx>0</posx>
             <posy>0</posy>
             <!--options-->
